@@ -1,13 +1,12 @@
 Source: libcsplit
-Section: unknown
+Section: libs
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
 Build-Depends: debhelper (>= 7), autotools-dev
-Standards-Version: 3.8.3
+Standards-Version: 3.9.5
 Homepage: https://github.com/libyal/libcsplit/
 
 Package: libcsplit
-Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: libcsplit-dbg
@@ -17,14 +16,14 @@ Description: Library to support cross-platform C split string functions
 Package: libcsplit-dbg
 Architecture: any
 Section: debug
-Depends: libcsplit (= ${Source-Version}), ${misc:Depends}
+Depends: libcsplit (= ${binary:Version}), ${misc:Depends}
 Description: Debugging symbols for libcsplit
  Debugging symbols for libcsplit.
 
 Package: libcsplit-dev
 Section: libdevel
 Architecture: any
-Depends: libcsplit (= ${Source-Version})
+Depends: libcsplit (= ${binary:Version}), ${misc:Depends}
 Description: Header files and libraries for developing applications for libcsplit
  Header files and libraries for developing applications for libcsplit.
 
