@@ -3,6 +3,9 @@ TODO
 * complete stand alone version
 * add tests
 
+20141229
+* updated dpkg files
+
 20141014
 * changes for deployment
 
